--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,11 @@ tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
 python-multipart
+passlib[bcrypt]
+python-jose
+sqlalchemy
+alembic
+email-validator
+stripe
+
+
