--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
 asyncpg==0.30.0
 babel==2.17.0
+bcrypt==4.3.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
@@ -10,6 +12,7 @@ contourpy==1.3.3
 cycler==0.12.1
 databases==0.9.0
 docker==7.1.0
+ecdsa==0.19.1
 et_xmlfile==2.0.0
 fastapi==0.116.1
 fonttools==4.59.0
@@ -21,40 +24,43 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 kiwisolver==1.4.9
+Mako==1.3.10
+MarkupSafe==3.0.2
 matplotlib==3.10.5
 numpy==2.3.2
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
+passlib==1.7.4
 pillow==10.4.0
 pluggy==1.6.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 pyparsing==3.2.3
 pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
+pywin32==311
 reportlab==4.4.3
 requests==2.32.5
+rsa==4.9.1
 scipy==1.16.1
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
 starlette==0.47.3
+stripe==12.5.0
+tkcalendar==1.6.1
+ttkbootstrap==1.14.2
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.35.0
-python-multipart
-passlib[bcrypt]
-python-jose
-sqlalchemy
-alembic
-email-validator
-stripe
-
-
