--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ anyio==4.10.0
 asyncpg==0.30.0
 babel==2.17.0
 bcrypt==4.3.0
-certifi==2025.8.3
+certifi==2023.7.22
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
@@ -31,7 +31,7 @@ numpy==2.3.2
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
-passlib==1.7.4
+passlib[bcrypt]==1.7.4
 pillow==10.4.0
 pluggy==1.6.0
 psycopg2-binary==2.9.10
@@ -39,19 +39,17 @@ pyasn1==0.6.1
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
-PyJWT==2.10.1
 pyparsing==3.2.3
 pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-jose==3.5.0
+python-jose[cryptography]==3.5.0
 python-multipart==0.0.20
-pytz==2025.2
-pywin32==311
+pytz==2023.3
 reportlab==4.4.3
 requests==2.32.5
 rsa==4.9.1
-scipy==1.16.1
+scipy==1.12.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
@@ -61,7 +59,6 @@ tkcalendar==1.6.1
 ttkbootstrap==1.14.2
 typing-inspection==0.4.1
 typing_extensions==4.15.0
-tzdata==2025.2
+tzdata==2023.3
 urllib3==2.5.0
 uvicorn==0.35.0
-python-jose[cryptography]==3.3.0
