--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ kiwisolver==1.4.9
 Mako==1.3.10
 MarkupSafe==3.0.2
 matplotlib==3.10.5
-numpy==2.3.2
+numpy>=1.26,<1.29
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
