--- a/requirements.txt
+++ b/requirements.txt
@@ -74,8 +74,8 @@ packaging==25.0
     # via
     #   matplotlib
     #   pytest
-pandas==2.3.1
-    # via -r requirements.in
+pandas==2.2.3
+    # via -r requirements.in and for CSV Smart Detection
 passlib[bcrypt]==1.7.4
     # via -r requirements.in
 pillow==10.4.0
@@ -151,5 +151,3 @@ uvicorn==0.35.0
     # via -r requirements.in
 tda-api==1.6.0
     # ThinkorSwim API access
-pandas==2.2.3
-    #Smart CSV Field Detection
