--- a/tao-trader-ui/package.json
+++ b/tao-trader-ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-heatmap-grid": "^0.9.1",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.2.0"
   },
